--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ background-image:linear-gradient(to bottom, yellow, black);
 color:orange;
 border-style:solid;
 border-color:black;
+height:300px;
+width:500px;
 }
 
 </style>
@@ -25,3 +27,4 @@ border-color:black;
 
 
 </html>
+
