--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ border-style:solid;
 border-color:black;
 height:300px;
 width:500px;
+text-align:center;
+font-size:150px;
 }
 
 </style>
@@ -27,4 +29,5 @@ width:500px;
 
 
 </html>
+
 
